--- a/app/src/main/res/layout/list_movie.xml
+++ b/app/src/main/res/layout/list_movie.xml
@@ -40,6 +40,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
+        <RatingBar
+            android:id="@+id/ratingBar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
     </LinearLayout>
 
 </LinearLayout>
